--- a/assets/style.css
+++ b/assets/style.css
@@ -110,12 +110,13 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #948d4a;
+    background-color: #1C6474;
     border-radius: 0;
 }
 
 .nav-pills .nav-link {
-    color: #000
+    color: #000;
+	cursor: pointer;
 }
 
 .item-column {
