--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,9 @@ body {
 }
 
 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     aspect-ratio: attr(width) / attr(height);
 }
 
