--- a/assets/bootstrap/bootstrap copy.css
+++ b/assets/bootstrap/bootstrap copy.css
@@ -108,19 +108,54 @@ h1 {
   font-size: calc(1.375rem + 1.5vw)
 }
 
+@media (min-width:1200px) {
+
+  .h1,
+  h1 {
+    font-size: 2.5rem
+  }
+}
+
+
 .h2,
 h2 {
   font-size: calc(1.325rem + .9vw)
 }
+
+@media (min-width:1200px) {
+
+  .h2,
+  h2 {
+    font-size: 2rem
+  }
+}
+
 
 .h3,
 h3 {
   font-size: calc(1.3rem + .6vw)
 }
 
+@media (min-width:1200px) {
+
+  .h3,
+  h3 {
+    font-size: 1.75rem
+  }
+}
+
+
 .h4,
 h4 {
   font-size: calc(1.275rem + .3vw)
+}
+
+@media (min-width:1200px) {
+
+  .h4,
+  h4 {
+    font-size: 1.5rem
+  }
 }
 
 p {
@@ -227,6 +262,50 @@ textarea {
   }
 }
 
+
+@media (min-width:768px) {
+
+  .container,
+  .container-md,
+  .container-sm {
+    max-width: 720px
+  }
+}
+
+@media (min-width:992px) {
+
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    max-width: 960px
+  }
+}
+
+@media (min-width:1200px) {
+
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 1140px
+  }
+}
+
+@media (min-width:1400px) {
+
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    max-width: 1320px
+  }
+}
+
+
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
@@ -257,6 +336,36 @@ textarea {
     width: 50%
   }
 }
+
+@media (min-width:768px) {
+  .col-md-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%
+  }
+}
+
+@media (min-width:992px) {
+  .col-lg-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%
+  }
+
+}
+
+@media (min-width:1200px) {
+  .col-xl-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%
+  }
+}
+
+@media (min-width:1400px) {
+  .row-cols-xxl-4>* {
+    flex: 0 0 auto;
+    width: 25%
+  }
+}
+
 
 .fade {
   transition: opacity .15s linear
