--- a/assets/style.css
+++ b/assets/style.css
@@ -42,8 +42,8 @@ body {
 
 img {
     width: 100%;
+    height: auto;
     object-fit: cover;
-    aspect-ratio: attr(width) / attr(height);
 }
 
 .social-link img {
