--- a/assets/style.css
+++ b/assets/style.css
@@ -273,17 +273,25 @@ input[type="submit"] {
     padding: .5em 1em
 }
 
-footer{
+footer {
     width: 100%;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     background-color: #000;
     color: #F6D2B8;
 }
 
-footer h3 {
+footer h2 {
     color: #E5975F;
 }
+
+footer address {
+    text-align: center;
+        margin: 20px;
+}
+
 
 @media all and (max-width: 1180px) {
     .picture {
